<resources>

    <!-- MainActivity Strings -->
    <string name="app_name">ReceiptTracker</string>
    <string name="loginButton">Login</string>
    <string name="signUpButton">Sign Up</string>
    <string name="app_logo_content_description">The app\'s logo.</string>
    <string name="email_text">\ Email Address:</string>
    <string name="password_text">\ Password:</string>
    <string name="or">or</string>
    <string name="app_logo">Receipt Tracker</string>
    <string name="title_activity_homepage">HomepageActivity</string>


    <!-- SignupActivity Strings -->
    <string name="name_hint">Name:</string>
    <string name="email_hint">Email Address:</string>
    <string name="password_hint">Password:</string>
    <string name="confirm_password_hint">Confirm Password:</string>
    <string name="title_activity_add_receipt">addReceipt</string>

    <!-- Strings used for the Drawer Menu -->
    <string name="drawer_close">Close the navigation bar</string>
    <string name="drawer_open">Open the navigation bar</string>
    <string name="title_activity_example">example</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_confirm_receipt">confirmReceipt</string>
</resources>
